--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Mochiy+Pop+One&family=Mochiy+Pop+P+One&family=Rampart+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +28,7 @@
                 </div>
                 <span class="cart-display">個</span>
             </div>
-            <div class="cart-btn"><img src="img/cart.png" alt=""></div>
+            <div class="cart-btn"><img src="img/cart.png" alt="" width="48" height="48"></div>
         </div>
     </section>
     <section class="main">
@@ -39,15 +41,15 @@
     </section>
     <section class="footer">
         <div class="footer-container">
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
-            <div class="genre-btn">1</div>
+            <div class="genre-btn" id="no1">1</div>
+            <div class="genre-btn" id="no2">2</div>
+            <div class="genre-btn" id="no3">3</div>
+            <div class="genre-btn" id="no4">4</div>
+            <div class="genre-btn">5</div>
+            <div class="genre-btn">6</div>
+            <div class="genre-btn">7</div>
+            <div class="genre-btn">8</div>
+            <div class="genre-btn">9</div>
         </div>
     </section>
     
