--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Mochiy+Pop+One&family=Mochiy+Pop+P+One&family=Rampart+One&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Rampart+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+                
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
