--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Rampart+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-                
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -45,7 +45,7 @@
             <div class="genre-btn" id="no2">2</div>
             <div class="genre-btn" id="no3">3</div>
             <div class="genre-btn" id="no4">4</div>
-            <div class="genre-btn">5</div>
+            <div class="genre-btn" id="no5">5</div>
             <div class="genre-btn">6</div>
             <div class="genre-btn">7</div>
             <div class="genre-btn">8</div>
