--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="BG"><img src="img/BGwood.jpg" alt=""></section>
+    <section class="BG"></section>
     <section class="top"></section>
+
+    <!-- header -->
     <section class="header">
         <div class="header-container">
             <div class="cart-price-wrapper">
@@ -31,25 +33,32 @@
             <div class="cart-btn"><img src="img/cart.png" alt="" width="48" height="48"></div>
         </div>
     </section>
+
+    <!-- main -->
     <section class="main">
         <div class="leftGoBtn">＜</div>
         <div class="rightGoBtn">＞</div>
         <div class="menu">
             <ul>
             </ul>
+            <div class="cart-in-animation"><img src="img/raimon_resize.png" alt=""></div>
         </div>
     </section>
+
+    <!-- footer -->
     <section class="footer">
         <div class="footer-container">
-            <div class="genre-btn" id="no1">1</div>
-            <div class="genre-btn" id="no2">2</div>
-            <div class="genre-btn" id="no3">3</div>
-            <div class="genre-btn" id="no4">4</div>
-            <div class="genre-btn" id="no5">5</div>
-            <div class="genre-btn">6</div>
-            <div class="genre-btn">7</div>
-            <div class="genre-btn">8</div>
-            <div class="genre-btn">9</div>
+            <div class="genre-btn left" id="no1">▲</div>
+            <!-- <div class="genre-btn up" id="no2">▲</div>
+            <div class="genre-btn down" id="no3">▲</div> -->
+            <div class="genre-btn right" id="no4">▲</div>
+            <div class="genre-btn left" id="no5">▲</div>
+            <!-- <div class="genre-btn up" id="no6">▲</div>
+            <div class="genre-btn down" id="no7">▲</div> -->
+            <div class="genre-btn right" id="no8">▲</div>
+            <div class="genre-btn" id="no9">リセット</div>
+            <div class="genre-btn" id="no10">拡大</div>
+            <div class="genre-btn" id="no11">縮小</div>
         </div>
     </section>
     
