--- a/index.html
+++ b/index.html
@@ -27,6 +27,51 @@
         </div>
     </section>
     <div class="overlay-area"></div>
+    <div class="cart-in-selection">
+        <div class="selection-text selection-style shippori-antique-regular">チャーハン</div>
+
+        <div class="selection-0">
+
+            <div class="selection-container selection-style selection-1">
+                <div class="selection-price-en">
+                    <div class="selection-price selection-style shippori-antique-regular">
+                        <span>800</span>
+                    </div>
+                    <div class="selection-3">
+                        <div class="selection-en selection-style shippori-antique-regular">円</div>
+                    </div>
+                </div>
+
+                <div class="selection-explain selection-style shippori-antique-regular">チャーハンです。</div>
+            </div>
+            
+            <div class="selection-container selection-style selection-2">
+                <div class="selection-minus-container">
+                    <div class="selection-minus selection-style">
+                        <span>－</span>
+                    </div>
+                </div>
+
+                <div class="selection-4">
+                    <div class="selection-num selection-style shippori-antique-regular">1</div>
+                    <div class="selection-ko selection-style shippori-antique-regular">個</div>
+                </div>
+
+                <div class="selection-plus-container">
+                    <div class="selection-plus selection-style">
+                        <span>＋</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
+        <div class="selection-container selection-style">
+            <div class="selection-cancel selection-style"><img src="img/cancel4.png" alt=""></div>
+            <div class="selection-send selection-style"><img src="img/cart.png" alt="" width="36" height="36"></div>
+        </div>
+    </div>
+    <div class="cart-in-selection-overlay"></div>
 
     <!-- header -->
     <section class="header">
